// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DocumentSettings should render correctly 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Document Settings
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash"
              >
                <div>
                  DummyEngraveDpiSlider
                  <p>
                    value: 
                    medium
                  </p>
                  <button
                    type="button"
                  >
                    change dpi
                  </button>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-col ant-col-6 ant-form-item-label css-dev-only-do-not-override-hash"
                    >
                      <label
                        class=""
                        for="workarea"
                        title="Working Area"
                      >
                        Working Area
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="workarea_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-label="Search"
                                  aria-owns="workarea_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="workarea"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="Ador"
                              >
                                Ador
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <strong>
                  Add-ons
                </strong>
                <div
                  class="ant-row css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item disabled css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="rotary_mode"
                            title="Rotary"
                          >
                            Rotary
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-disabled"
                                disabled=""
                                id="rotary_mode"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item disabled css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="borderless_mode"
                            title="Open Bottom"
                          >
                            Open Bottom
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-disabled"
                                disabled=""
                                id="borderless_mode"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item disabled css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="autofocus-module"
                            title="Autofocus"
                          >
                            Autofocus
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-disabled"
                                disabled=""
                                id="autofocus-module"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item disabled css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="diode_module"
                            title="Diode Laser"
                          >
                            Diode Laser
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-disabled"
                                disabled=""
                                id="diode_module"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test DocumentSettings should render correctly 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Document Settings
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash"
              >
                <div>
                  DummyEngraveDpiSlider
                  <p>
                    value: 
                    high
                  </p>
                  <button
                    type="button"
                  >
                    change dpi
                  </button>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-col ant-col-6 ant-form-item-label css-dev-only-do-not-override-hash"
                    >
                      <label
                        class=""
                        for="workarea"
                        title="Working Area"
                      >
                        Working Area
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="workarea_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-label="Search"
                                  aria-owns="workarea_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="workarea"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="Ador"
                              >
                                Ador
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <strong>
                  Add-ons
                </strong>
                <div
                  class="ant-row css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item disabled css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="rotary_mode"
                            title="Rotary"
                          >
                            Rotary
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-disabled"
                                disabled=""
                                id="rotary_mode"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item disabled css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="borderless_mode"
                            title="Open Bottom"
                          >
                            Open Bottom
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-disabled"
                                disabled=""
                                id="borderless_mode"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item disabled css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="autofocus-module"
                            title="Autofocus"
                          >
                            Autofocus
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-disabled"
                                disabled=""
                                id="autofocus-module"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item disabled css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="diode_module"
                            title="Diode Laser"
                          >
                            Diode Laser
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="false"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-disabled"
                                disabled=""
                                id="diode_module"
                                role="switch"
                                type="button"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test DocumentSettings should render correctly 3`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Document Settings
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash"
              >
                <div>
                  DummyEngraveDpiSlider
                  <p>
                    value: 
                    high
                  </p>
                  <button
                    type="button"
                  >
                    change dpi
                  </button>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-col ant-col-6 ant-form-item-label css-dev-only-do-not-override-hash"
                    >
                      <label
                        class=""
                        for="workarea"
                        title="Working Area"
                      >
                        Working Area
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item ant-select-status-success css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="workarea_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-label="Search"
                                  aria-owns="workarea_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="workarea"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="beamo"
                              >
                                beamo
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <strong>
                  Add-ons
                </strong>
                <div
                  class="ant-row css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="rotary_mode"
                            title="Rotary"
                          >
                            Rotary
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="true"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-checked"
                                id="rotary_mode"
                                role="switch"
                                type="button"
                                value="true"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="borderless_mode"
                            title="Open Bottom"
                          >
                            Open Bottom
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="true"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-checked"
                                id="borderless_mode"
                                role="switch"
                                type="button"
                                value="true"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-row css-dev-only-do-not-override-hash"
                >
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="autofocus-module"
                            title="Autofocus"
                          >
                            Autofocus
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="true"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-checked"
                                id="autofocus-module"
                                role="switch"
                                type="button"
                                value="true"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="diode_module"
                            title="Diode Laser"
                          >
                            Diode Laser
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-18 ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                aria-checked="true"
                                class="ant-switch css-dev-only-do-not-override-hash ant-switch-checked"
                                id="diode_module"
                                role="switch"
                                type="button"
                                value="true"
                              >
                                <div
                                  class="ant-switch-handle"
                                />
                                <span
                                  class="ant-switch-inner"
                                >
                                  <span
                                    class="ant-switch-inner-checked"
                                  />
                                  <span
                                    class="ant-switch-inner-unchecked"
                                  />
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-hash ant-select-dropdown-placement-bottomLeft"
      style="left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div>
        <div
          id="workarea_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="beamo"
            aria-selected="true"
            id="workarea_list_0"
            role="option"
          >
            fbm1
          </div>
          <div
            aria-label="Beambox"
            aria-selected="false"
            id="workarea_list_1"
            role="option"
          >
            fbb1b
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                  title="beamo"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    beamo
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox Pro"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox Pro
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Beambox Pro II"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Beambox Pro II
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="HEXA"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    HEXA
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="Ador"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Ador
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
